<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TableLayout android:id="@+id/table1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5">
        <TableRow android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".35"
        android:text="@string/name_box"
        android:textSize="25dp"/>
    <EditText android:id="@+id/edit_name"
        android:layout_weight=".65"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name">
        <requestFocus/>
            </EditText>
        </TableRow>
    <TableRow android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight=".35"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/contact_box"
            android:textSize="25dp"
            />
        <EditText android:id="@+id/edit_cont"
            android:layout_weight=".65"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_cont"/>
    </TableRow>
        <TableRow android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/save" />
            <Button
                android:id="@+id/button2"
                android:text="@string/del"

                />

        </TableRow>






    </TableLayout>
</LinearLayout>
